<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status"
        android:id="@+id/status_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/no_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_filter_text"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/lpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lpf_text"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/hpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hpf_text"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/bpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpf_text"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/bsf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bsf_text"
            android:onClick="onRadioButtonClicked"/>


    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cut_off_label_text"
        android:id="@+id/cut_off_label" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cutofseek"
        android:max="20000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/center_label_text"
        android:id="@+id/center_label" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerseek"
        android:max="20000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/degree_label_text"
        android:id="@+id/degree_label" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/degree_seek"
        android:max="20" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

</LinearLayout>
